crates/cli/tests/snapshots/cli_output_snapshots__cli_health_help.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stdout
---
Service health and status

Usage: wheelctl health [OPTIONS]

Options:
      --json        Output in JSON format for machine parsing
  -w, --watch       Watch health events in real-time
  -v, --verbose...  Verbose logging
  -h, --help        Print help
