crates/cli/tests/snapshots/cli_output_snapshots__cli_invalid_calibration_type.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stderr
---
error: invalid value 'bogus' for '<CALIBRATION_TYPE>'
  [possible values: center, dor, pedals, all]

For more information, try '--help'.
