crates/cli/tests/snapshots/cli_output_snapshots__cli_missing_args_error.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stderr
---
Racing Wheel Control CLI - Manage racing wheel hardware, profiles, and diagnostics

Usage: wheelctl [OPTIONS] <COMMAND>

Commands:
  device      Device management commands
  profile     Profile management commands
  plugin      Plugin management commands
  diag        Diagnostic and monitoring commands
  game        Game integration commands
  telemetry   Telemetry probe and capture commands
  safety      Safety and control commands
  completion  Generate shell completion scripts
  health      Service health and status
  help        Print this message or the help of the given subcommand(s)

Options:
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help (see more with '--help')
  -V, --version     Print version
