crates/cli/tests/snapshots/cli_output_snapshots__cli_safety_help.snap
---
source: crates/cli/tests/cli_output_snapshots.rs
expression: stdout
---
Safety and control commands

Usage: wheelctl.exe safety [OPTIONS] <COMMAND>

Commands:
  enable  Enable high torque mode
  stop    Emergency stop all devices
  status  Show safety status
  limit   Set torque limits
  help    Print this message or the help of the given subcommand(s)

Options:
      --json        Output in JSON format for machine parsing
  -v, --verbose...  Verbose logging
  -h, --help        Print help
